# CruxGen

./: .gitignore  404.html  README.md  index.html  logging.json  main.py  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api_routers/chunk_management/: index.html
api_routers/document_router/: index.html
api_routers/main/: index.html
api_routers/qa_management/: index.html
cruxgen/configuration/: logging_config.py  settings.py  vault_config.py
cruxgen/database/: create_tables.sql  crud_functions.py  crud_models.py  db_config.py
cruxgen/document_managment/: document_router.py  minio_config.py  minio_operations.py  usage.py
cruxgen/llm_management/chunker/: chunking_router.py  document_chunker.py
cruxgen/llm_management/llm_config/: config.py
cruxgen/llm_management/parsers/: models.py
cruxgen/llm_management/prompts/: prompt_loader.py  qa_system.md  qa_user.md
cruxgen/pydantic_models/: generic_output_model.py  minio_models.py
cruxgen/qa_pipeline/: convert_chunks_to_qa.py  qa_router.py
cruxgen_sdk/: sdk.py
docs/: future_work.md  index.md  sdk.md  summary.md
docs/api_routers/: chunk_management.md  document_router.md  main.md  qa_management.md
docs/project_planning/: brd.md  outcomes.md  tasks.md  test_cases.md  user_stories.md
example/: usage.py
future_work/: index.html
project_planning/: brd.html  outcomes.html  tasks.html  test_cases.html  user_stories.html
sdk/: index.html
search/: search_index.json
