[project]
name = "cruxgen"
version = "0.1.0"
description = "Create LLM-ready datasets. Straight from the source."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "hvac>=2.3.0",
    "langchain-docling>=1.0.0",
    "langchain-text-splitters>=0.3.9",
    "minio>=7.2.16",
    "openai>=1.102.0",
    "psycopg2>=2.9.10",
    "pyfuncmonitor>=0.1.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]
